crates/uitest/fixtures/mir_check/move_view_param_zst_call.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/move_view_param_zst_call.fe
---
error[10-0002]: move conflict in `fn example`
  ┌─ move_view_param_zst_call.fe:8:16
  │
8 │     make_pair2(a, b)
  │                ^ cannot move out of a view parameter
  │
  = help: consider changing `a: Foo` to `a: own Foo`
  = help: if you only need to destructure/inspect `a`, use explicit borrowing (`match ref a { ... }` or `let ... = ref a`)
